# F1_Race_Strategy_Optimization_Engine_V1

./: .gitignore  .vercelignore  README.md  app.py  index.py  main.py  pyproject.toml  requirements.txt  run_dashboard.py  start_dashboard.bat  start_dashboard_detached.bat
data/f1db/: f1db-circuits.csv  f1db-constructors.csv  f1db-drivers.csv  f1db-engine-manufacturers.csv  f1db-grands-prix.csv  f1db-races-constructor-standings.csv  f1db-races-driver-of-the-day-results.csv  f1db-races-driver-standings.csv  f1db-races-fastest-laps.csv  f1db-races-free-practice-1-results.csv  f1db-races-free-practice-2-results.csv  f1db-races-free-practice-3-results.csv  f1db-races-pit-stops.csv  f1db-races-qualifying-results.csv  f1db-races-race-results.csv  f1db-races-sprint-qualifying-results.csv  f1db-races-sprint-race-results.csv  f1db-races-sprint-starting-grid-positions.csv  f1db-races-starting-grid-positions.csv  f1db-races.csv  f1db-seasons-constructor-standings.csv  f1db-seasons-constructors.csv  f1db-seasons-driver-standings.csv  f1db-seasons-drivers.csv  f1db-seasons-engine-manufacturers.csv  f1db-seasons-entrants-drivers.csv  f1db-seasons-tyre-manufacturers.csv  f1db-tyre-manufacturers.csv
docs/: architecture.md  mvp_backlog.md  product_brief.md
examples/: sample_optimize_request.json
scripts/: train_model_lab.py
src/: index.py
src/f1_strategy_engine/: __init__.py
src/f1_strategy_engine/api/: main.py
src/f1_strategy_engine/domain/: models.py
src/f1_strategy_engine/ml/: baseline.py
tests/: test_dashboard.py  test_optimizer.py
(+12 files in other folders)
