[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-strategy-engine"
version = "0.1.0"
description = "F1 Race Strategy Optimization Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "numpy==2.3.2",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "duckdb==1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[project.scripts]
app = "f1_strategy_engine.api.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel.scripts]
build = "python scripts/train_model_lab.py"
